--- a/style.css
+++ b/style.css
@@ -12,7 +12,8 @@
 
 header{
     /* background-repeat: no-repeat; */
-    background-image: linear-gradient(rgba(231, 231, 231, 0),rgba(63, 63, 63, 0.644)),url(images/salon-du-mariage-paris-263448-1200-630.jpg);
+    background-image: linear-gradient(rgba(231, 231, 231, 0),rgba(63, 63, 63, 0.644)),url(images/Mariage-voici-le-budget-moyen-que-comptent-depenser-les-futurs-maries-en-2022.jpg);
+    /* background-image: linear-gradient(rgba(231, 231, 231, 0),rgba(63, 63, 63, 0.644)),url(images/); */
     background-repeat: no-repeat;
     background-size: cover;
     height: 650px;
@@ -505,8 +506,8 @@ padding-right: 10%;
 }
 
 .comment{
-    margin: 0% 27%;
-    margin-top: 10ù;
+    margin: 0% 5%;
+    margin-top: 20%;
 }
 .comment h6{
    font-size: Lato;
@@ -1102,9 +1103,12 @@ font-family: Lato;
 .index .b1{
     background: rgb(0, 140, 255);
     
+    
 }
 .index .b2{
     background: red;
+
+ 
 }
 .index .b1:hover{
         background: yellowgreen;
@@ -1223,24 +1227,508 @@ font-family: Lato;
     margin: 0% 2%;
     font-family: Lato;
     font-size: 1.2rem;
-    color: rgb(48, 41, 41);
+    color: wheat;
     /* margin-left: 5%; */
 }
+
+
 .nom button{
     width: 150px;
     height: 35px;
     border: none;
     background: rgba(255, 0, 0, 0.582);
     border-radius: 50px;
-    margin-left: %;
 }
 .nom button a{
     text-decoration: none;
-    color: white;
+    color: wheat;
 }
 .nom button:hover{
     background: red;
 }
+
+/* section 11 */
+.sect_12{
+    background: #2b2a288c;
+    padding-top: 5%;
+}
+.sect_12 h1{
+    text-align: center;
+    font-size: 2rem;
+    color: #8a6a29c4;
+    padding: 3% 5%;
+    background: white;
+    margin: 0% 30%;
+    margin-bottom: 5%;
+   
+}
+.sect_12 p{
+    padding: 0% 10%;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
+.sect_12 .container{
+    margin: 0% 5%;
+    margin-top: 5%;
+    padding-bottom: 5%;
+}
+.sect_12 .container{
+    display: flex;
+    justify-content: space-around;
+}
+.sect_12 .container h3{
+    font-size: 1.5rem;
+    color: #8a6a29c4;
+    padding: 2% 10%;
+}
+.sect_12 .container img{
+    width: 400px;
+    height: 350px;
+    border-radius: 50px;
+   
+}
+.sect_12 .container button{
+    width: 150px;
+    height: 35px;
+    border: none;
+    background: #8a6a29;
+    margin: 0% 10%;
+}
+.sect_12 .container button a{
+    text-decoration: none;
+    color: #a5a3a3;
+}
+.sect_12 .container button:hover{
+    background: #785101;
+}
+
+
+/* section 13 */
+
+.sect_13{
+    background: #2b2a288c;
+}
+.sect_13 h1{
+    text-align: center;
+    font-size: 2rem;
+    color: #8a6a29c4;
+    padding: 2% 5%;
+    background: white;
+    margin: 0% 30%;
+    margin-bottom: 10%;
+}
+
+.sect_13 .container{
+    display: flex;
+    justify-content: space-around;
+    margin: 0% 5%;
+    margin-top: 5%;
+    padding-bottom: 5%;
+}
+.sect_13 .container h3{
+    font-size: 1.5rem;
+    color: #8a6a29c4;
+    padding: 2% 15%;
+}
+.sect_13 .container p{
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 1.2rem;
+    /* color: #8a6a29c4; */
+    padding: 2% 15%;
+}
+
+.sect_13 .container img{
+    width: 400px;
+    height: 350px;
+    border-radius: 50px;
+
+}
+.sect_13 .container button{
+    width: 150px;
+    height: 35px;
+    border: none;
+    background: #8a6a29;
+    margin: 0% 15%;
+}
+.sect_13 .container button a{
+    text-decoration: none;
+    color: #a5a3a3;
+}
+.sect_13 .container button:hover{
+    background: #785101;
+}
+
+/* section 14 */
+
+.sect_14{
+    background: #2b2a288c;
+}
+.sect_14 h1{
+    text-align: center;
+    font-size: 2rem;
+    color: #8a6a29c4;
+    padding: 2% 5%;
+    background: white;
+    margin: 0% 30%;
+    margin-bottom: 5%;
+}
+.sect_14 p{
+    padding: 1% 10%;
+    font-family: Georgia, 'Times New Roman', Times, serif
+
+}
+.sect_14 .container{
+    display: flex;
+    margin: 2% 7%;
+}
+
+.sect_14 img{
+    width: 200px;
+    height: 150px;
+    border: 3px solid whitesmoke;
+    margin: 0% 2%;
+}
+
+.sect_14 button{
+    width: 200px;
+    height: 35px;
+    border: none;
+    background: #8a6a29;
+    margin: 2% 40%;
+    margin-bottom: 5%;
+}
+.sect_14 button a{
+    text-decoration: none;
+    color: #a5a3a3;
+}
+.sect_14 button:hover{
+    background: #785101;
+}
+
+/* section 15 */
+
+.sect_15{
+    background: #2b2a288c;
+}
+.sect_15 h1{
+    text-align: center;
+    font-size: 2rem;
+    color: #8a6a29c4;
+    padding: 2% 5%;
+    background: white;
+    margin: 0% 30%;
+}
+.sect_15 h5{
+    background: #2b2a28;
+    padding: 10%;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    color: whitesmoke;
+}
+
+.sect_15 .container{
+    display: flex;
+    justify-content: space-around;
+    margin: 0% 5%;
+    margin-top: 5%;
+    padding-bottom: 5%;
+}
+.sect_15 .container h3{
+    font-size: 1.5rem;
+    color: #8a6a29c4;
+    padding: 2% 15%;
+}
+.sect_15 .container p{
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 1.2rem;
+    /* color: #8a6a29c4; */
+    padding: 2% 15%;
+}
+
+.sect_15 .container img{
+    width: 400px;
+    height: 350px;
+    border-radius: 50px;
+
+}
+.sect_15 .container button{
+    width: 150px;
+    height: 35px;
+    border: none;
+    background: #8a6a29;
+    margin: 0% 15%;
+}
+.sect_15 .container button a{
+    text-decoration: none;
+    color: #a5a3a3;
+}
+.sect_15 .container button:hover{
+    background: #785101;
+}
+
+/* section 16 */
+
+.sect_16{
+    background: #2b2a283f;
+    padding-top: 5%;
+}
+.sect_16 h1{
+    text-align: center;
+    font-size: 2.5rem;
+    color: #bf7f30;
+    padding: 3% 5%;
+    /* background: white; */
+    /* margin: 0% 30%; */
+    /* margin-bottom: 5%; */
+   
+}
+.sect_16 h2{
+    text-align: center;
+    font-size: 2.5rem;
+    color: #bf7f30;
+    padding: 3% 5%;
+}
+.sect_16 h6{
+    padding: 3% 5%;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    background: white;
+     margin: 0% 7%;
+     margin-bottom: 5%;
+     border: 5px solid wheat;
+     /* border-radius: 10px; */
+}
+
+.sect_16 .container{
+    display: flex;
+    margin: 0% 5%;
+    margin-top: 5%;
+    padding-bottom: 5%;
+}
+.sect_16 i{
+   font-size: 7rem;
+   background: tomato;
+   padding: 2% 10%;
+   width: 200px;
+}
+.sect_16 h3{
+margin-left: 5%;
+}
+.sect_16 .container p{
+    padding-right: 20%;
+    padding-left: 10%;
+}
+
+.sect_16 button{
+    width: 150px;
+    height: 35px;
+    border: none;
+    background: #a96322;
+    margin: 0% 45%;
+    margin-bottom: 5%;
+}
+.sect_16 button a{
+    text-decoration: none;
+    color: whitesmoke;
+}
+.sect_16 button:hover{
+    background: #785101;
+}
+
+/* section 17 */
+
+.sect_17{
+    background: #2b2a283f;
+    padding-top: 5%;
+}
+.sect_17 h2{
+    text-align: center;
+    font-size: 2.5rem;
+    color: #bf7f30;
+    padding: 3% 5%;
+    
+}
+
+
+
+.sect_17 .container{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+
+   
+}
+
+.sect_17 p{
+    background: #0c0b0b;
+    margin: 0% 5%;
+    padding: 1% 10%;
+    color: whitesmoke;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    border: 5px solid wheat;
+    border-radius: 50px;
+}
+
+.sect_17 button{
+    width: 150px;
+    height: 35px;
+    border: none;
+    background: #a96322;
+    margin: 0% 45%;
+    margin-bottom: 5%;
+}
+.sect_17 button a{
+    text-decoration: none;
+    color: whitesmoke;
+}
+.sect_17 button:hover{
+    background: #785101;
+}
+.sect_17 img{
+width: 300px;
+height: 400px;
+border: 5px solid wheat;
+}
+
+.sect_17 button{
+    width: 150px;
+    height: 35px;
+    border: none;
+    background: #a96322;
+    margin: 3% 45%;
+    margin-bottom: 5%;
+}
+.sect_17 button a{
+    text-decoration: none;
+    color: whitesmoke;
+}
+.sect_17 button:hover{
+    background: #785101;
+}
+
+/* section 18 */
+
+.sect_18{
+    background: #d3d3ce3d;
+}
+
+.sect_18 h1{
+    text-align: center;
+    padding-top: 5%;
+    color: #684807;
+    border-bottom: 2px solid #684807;
+}
+.sect_18 h6{
+    text-align: center;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-size: 1.1rem;
+}
+.sect_18 .contai{
+    display: flex;
+    justify-content: space-around;
+    padding: 8% 0%;
+    margin: 0% 3%;
+    margin-left: 12%;
+}
+.sect_18 i{
+    font-size: 7rem;
+    margin-left: 12%;
+}
+.sect_18 h3{
+    padding-top: 3%;
+    color: #8a6a29;
+    padding-left: 12%;
+}
+.sect_18 p{
+    padding-right: 8%;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 1.1rem;
+}
+.sect_18 .ro{
+    padding: 0% 3%;
+}
+.sect_18 button{
+    border: 2px solid white;
+    border-radius: 50px;
+    width: 130px;
+    height: 35px;
+
+}
+.sect_18 button a{
+    color: #2b2a28;
+    text-decoration: none;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
+.sect_18 button:hover{
+    background: #2b2a28;
+}
+.sect_18 button a:hover{
+    color: white;
+}
+
+
+/* section 19 */
+.sect_19{
+    background: #d3d3ce3d;
+    padding-top: 10%;
+}
+
+.sect_19 .contact-form{
+    display: flex;
+    margin: 0% 10%;
+}
+
+.sect_19 .contact-form h1{
+    
+    color: #684807;
+    border-bottom: 2px solid #684807;
+    width: 250px;
+    margin-left: 7%;
+}
+
+.sect_19 .contact-form p{
+    padding: 3% 7%;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 1.1rem;
+}
+
+.sect_19 .contact-form i{
+    font-size: 2rem;
+    color: red;
+    margin: 5%;
+}
+
+.sect_19 form h2{
+    color: #684807;
+    border-bottom: 2px solid #684807;
+    width: 600x;
+}
+.sect_19 form input{
+    width: 500px;
+    border: none;
+    height: 40px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    color: black;
+    margin: 2% 0%;
+}
+.sect_19 form .textarea{
+    width: 500px;
+    border: none;
+    height: 40px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    color: black;
+    margin: 2% 0%;
+}
+.sect_19 form button{
+    border: 2px solid white;
+    border-radius: 50px;
+    width: 130px;
+    height: 35px;
+}
+.sect_19 form button:hover{
+    background: #2b2a28;
+    color: wheat;
+}
+
+
 
 /* footer */
 footer{
